<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:background="@color/light_gray_02">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@color/light_gray_02">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray_02"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/address_details_tv_text"
                        android:textColor="@color/light_grey"
                        android:textSize="@dimen/no_saved_address_tv_text_size" />

                    <View style="@style/Divider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="25dp"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/street_add_et_id"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false"
                                android:lines="3"
                                android:textColor="@color/light_grey"
                                android:minLines="1"
                                android:hint="@string/street_add_et_hint"
                                android:imeActionLabel="@string/street_add_et_hint"
                                android:inputType="text|textMultiLine"
                                android:maxLines="3" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/flat_num_add_et_id"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/cardview_dark_background"
                                android:hint="@string/flat_num_add_et_hint"
                                android:imeActionLabel="@string/flat_num_add_et_hint"
                                android:inputType="text"
                                android:maxLines="3" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/landmark_add_et_id"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/landmark_add_et_hint"
                                android:imeActionLabel="@string/landmark_add_et_hint"
                                android:inputType="text"
                                android:textColor="@color/cardview_dark_background"
                                android:maxLines="1" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/tag_details_tv_text"
                        android:textColor="@color/light_grey"
                        android:textSize="@dimen/no_saved_address_tv_text_size" />


                    <View style="@style/Divider" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/home_tag_iv_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/home" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/padding_margin_size_7"
                                android:text="@string/home_tv_text"
                                android:textSize="@dimen/no_saved_address_tv_text_size" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/work_tag_iv_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/work" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/padding_margin_size_7"
                                android:text="@string/work_tv_text"
                                android:textSize="@dimen/no_saved_address_tv_text_size" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/other_tag_iv_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/other" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/padding_margin_size_7"
                                android:text="@string/other_tv_text"
                                android:textSize="@dimen/no_saved_address_tv_text_size" />

                        </LinearLayout>

                    </RelativeLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/address_type_view_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="25dp"
                        android:visibility="gone">

                        <EditText
                            android:id="@+id/address_type_et_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_type_add_et_hint"
                            android:textColor="@color/cardview_dark_background"
                            android:imeActionLabel="@string/add_type_add_et_hint"
                            android:inputType="text"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/save_btn_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/green_kind_of"
        android:padding="12dp"
        android:text="@string/save_address_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/cardview_light_background"
        android:textSize="16sp" />
</RelativeLayout>